# er-explorer

./: README.md  pyproject.toml
er_explorer/: erd.py  index.html
tests/: sample.py
