[tool.poetry]
name = "er-explorer"
version = "0.1.0"
description = ""
authors = ["tangkikodo <allmonday@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pydantic = "^2.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
